Feat: Implement expert check request.
