# models/expert_ads.go
@@ -1,13 +1,21 @@
 package models
 
+import (
+	"Airplane-Divar/utils"
+	"time"
+)
+
 type ExpertAds struct {
-	ID       uint   `gorm:"primary_key"`
-	Report   string `gorm:"type:varchar()"`
-	Status   int    `gorm:"type:int"`
-	Expert   User   `gorm:"foreignKey:ExpertID"`
-	ExpertID uint   `gorm:"type:uint"`
-	AdsID    uint   `gorm:"type:uint;not null"`
-	Ad       Ad
+	ID        uint               `gorm:"primary_key"`
+	Report    string             `gorm:"type:text"`
+	Status    utils.ExpertStatus `gorm:"type:expert_status_type"`
+	CreatedAt time.Time          `gorm:"default:CURRENT_TIMESTAMP()"`
+	Expert    User               `gorm:"foreignKey:ExpertID"`
+	ExpertID  uint               `gorm:"type:bigint"`
+	AdsID     uint               `gorm:"type:bigint;not null"`
+	UserID    uint               `gorm:"type:uint;not null"`
+	User      User               `gorm:"foreignKey:UserID"`
+	Ads       Ad
 }
 
 func (ExpertAds) TableName() string {
