# models/requests.go
@@ -1,0 +1,8 @@
+package models
+
+import "Airplane-Divar/utils"
+
+type UpdateExpertCheckRequest struct {
+	Status utils.ExpertStatus `json:"status"`
+	Report string             `json:"report"`
+}
